infra/non-prod-gen2/kube-prometheus-stack/prometheus-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-ui
  namespace: kube-prometheus-stack
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-system
      sectionName: https
  hostnames:
    - prometheus.local.non-prod.abbottland.io
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
